# letovo-all

./: .codecov.yml  .gitignore  .gitmodules  AGENTS.md  BUILD_SUCCESS.md  BuildConfig.json  CMakeLists.txt  README.md  action-maker.py  agent-memory.md  auth.cc  auto_installer.py  examples.cpp  install-run-core.sh  install-run.sh  methods_ai_expl.json  requirements.txt  run-prod.sh  temp_image_test.py  test.py  тз фронт.md
.claude/: PROJECT_POLICY.md  settings.local.json
ai-docs/: ACTUAL_SERVER_RESPONSES.md  AI_AGENT_ONBOARDING.md  ALL_TESTS_FIXED.md  BADGES.md  COVERAGE_REPORT.md  FINAL_TEST_REPORT.md  FINAL_TEST_STATUS.md  FIXES_SUMMARY.md  README.md  TEST_CHANGES_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_REPORT.md  TEST_VERIFICATION_REPORT.md  chat_api_frontend_ru.md  commit_staging_ru.md  frontend_api_delta_ru.md  ws_api_frontend_ru.md
certs/: certificate.crt  dh2048.pem  key.pem  server.pem
docs/: ai_gen_docs.py  avatar_upload_role_migration.sql  chat_migration.sql  (+36 more)
src/: CMakeLists.txt  Dockerfile  MarketConfig.json  MediaConfig.json  PagesConfig.json  ServerConfig.json  SqlConnectionConfig.json  auth.cc  auth.h  config.h  examples.cpp  hash.cc  hash.h  pqxx_cp.cc  pqxx_cp.h  registration_server.cpp  server.cpp  url_parser.cc  url_parser.h  user_data.cc  user_data.h
src/basic/: achivements.cc  achivements.h  add_money.sql  analytics.cc  analytics.h  assist_funcs.cc  assist_funcs.h  auth.cc  auth.h  avatar_policy.h  checks.cc  checks.h  comment.h  config.h  hash.cc  hash.h  media.cc  media.h  media_cash.cc  media_cash.h  otel.cc  otel.h  page_server.cc  page_server.h  pqxx_cp.cc  pqxx_cp.h  qr_worker.cc  qr_worker.h  security.cc  security.h  server_traits.h  url_parser.cc  url_parser.h  user_data.cc  user_data.h  utils.cc  utils.h  ws_endpoint.cc  ws_endpoint.h  ws_event_bus.cc  (+3 more)
src/configs/: MarketConfig.json  PagesConfig.json  ServerConfig.json  SqlConnectionConfig.json
src/image_processing/: image_processor.py  libimage.c  libimage.h  test_image.py
src/launch_logs/: readme.md
src/letovo-soc-net/: achivements.cc  achivements.h  authors.cc  authors.h  chat.cc  chat.h  chat_migration.sql  chat_ws.cc  chat_ws.h  chats.cc  create_tables.sql  page_server.cc  page_server.h  social.cc  social.h  ws_session_migration.sql
src/letovo-soc-net/test/: test_article_category_normalization.py
src/market/: .gitignore  CMakeLists.txt  DOM.cc  DOM.h  actives.cc  actives.h  readme.md  transaction_rules.h  transactions.cc  transactions.h
src/pages/posts/: example_post.md  example_post_2.md  example_post_3.md  secret_example.md
src/python-helpers/: UploaderConfig.json  ach_creator.py  action-maker.py  children_adder.py  dockerfile.uploader  flask_uploader.py  latency.js  upload.cpp
(+69 files in other folders)
